--- a/lab5.css
+++ b/lab5.css
@@ -10,14 +10,20 @@ p {
 p, label {
     color: navy;
 }
-input[type=text], input[type=number], select {
+input[type=text], input[type=number], #state-22 {
     padding: 15px 20px;
     margin: 10px;
     border: 1px solid black;
     border-radius: 12px;
-    width: 100%;
-    cursor: pointer;
+    width: calc(100%-20px);
 }
 input[type=submit] {
+    width: calc(100%-20px);
     background-color: black;
+    color: white;
+    padding: 145x 20px;
+    margin: 10px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
 }
