--- a/lab5.css
+++ b/lab5.css
@@ -15,7 +15,8 @@ input[type=text], input[type=number], #state-22 {
     margin: 10px;
     border: 1px solid black;
     border-radius: 12px;
-    width: calc(100%-20px);
+    width: 100%;
+    box-sizing: border-box;
 }
 input[type=submit] {
     width: calc(100%-20px);
@@ -27,4 +28,3 @@ input[type=submit] {
     border-radius: 10px;
     cursor: pointer;
 }
-label:after { content: "\a" }
