--- a/lab5.css
+++ b/lab5.css
@@ -22,7 +22,7 @@ input[type=submit] {
     width: 100%;
     background-color: black;
     color: white;
-    padding: 145x 20px;
+    padding: 10px 13px;
     margin: 10px;
     border: none;
     border-radius: 10px;
