--- a/lab5.css
+++ b/lab5.css
@@ -32,3 +32,6 @@ input[type=submit] {
     display:block;
     clear:both;
 }
+.break, input[type=date], input[type=checkbox], input[type=radio], .center {
+    margin: auto;
+}
